Update and rename ema-website.html to index.html
This website provides fast and accurate audio to text English transcription for free!

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(to bottom, #3498db, #2c3e50); /* Updated background gradient */
+            background: linear-gradient(to bottom, #3498db, #2c3e50); /* Updated bg gradient */
             color: #fff;
         }
 
